# news_scraper

./: .gitignore  README.md
.github/workflows/: tests.yml
app/: index.js  jest-results.json  package-lock.json  package.json
app/router/: emol.js  router.js
app/scrappers/: emolDirector.js  pageInfoBuilder.js
app/src/: index.js
app/src/controllers/: emol.js
app/src/routes/: emol.js  router.js
app/src/utils/getNews/: getNewsEmol.js  getNewsTemplate.js
app/src/utils/scrappers/: emolDirector.js  pageInfoBuilder.js
app/tests/: emolDirector.test.js  emolPageInfo.json  emolRoutes.test.js  getNewsEmol.test.js
epup_builder/: pyproject.toml
similarity/: pyproject.toml
similarity/src/similarity/api/: title_similarity.py
similarity/src/similarity/helper/: check_similarity.py
similarity/tests/: test_check_similarity.py
