[project]
name = "epup-builder"
version = "0.1.0"
description = ""
authors = [
    {name = "Benjamin Ross",email = "benjamn.ross@uc.cl"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "epup_builder", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
