[project]
name = "similarity"
version = "0.1.0"
description = ""
authors = [
    {name = "Benjamin Ross",email = "benjamn.ross@uc.cl"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "similarity", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
